--- a/campaign_releases.json
+++ b/campaign_releases.json
@@ -2,7 +2,8 @@
   "panda": {
     "005": {"arch": "slc6_amd64_gcc530", "release": "CMSSW_8_0_28"},
     "012": {"arch": "slc6_amd64_gcc630", "release": "CMSSW_10_1_4"},
-    "013": {"arch": "slc6_amd64_gcc700", "release": "CMSSW_10_2_5_patch1"}
+    "013": {"arch": "slc6_amd64_gcc700", "release": "CMSSW_10_2_5_patch1"},
+    "hgc": {"arch": "slc7_amd64_gcc820", "release": "CMSSW_10_6_0_pre2"}
   },
   "miniaod": {
     "RunIISummer16MiniAODv2": {"arch": "slc6_amd64_gcc530", "release": "CMSSW_8_0_21", "parent": "RunIISummer16DR80Premix"},
@@ -17,6 +18,7 @@
   "gen": {
     "RunIISummer15wmLHEGS": {"arch": "slc6_amd64_gcc481", "release": "CMSSW_7_1_25_patch3"},
     "RunIIFall17wmLHEGS": {"arch": "slc6_amd64_gcc630", "release": "CMSSW_9_3_9_patch1"},
-    "RunIIFall18wmLHEGS": {"arch": "slc6_amd64_gcc700", "release": "CMSSW_10_2_6"}
+    "RunIIFall18wmLHEGS": {"arch": "slc6_amd64_gcc700", "release": "CMSSW_10_2_6"},
+    "PhaseIIMTDTDRAutumn18GS": {"arch": "slc6_amd64_gcc700", "release": "CMSSW_10_4_0_mtd1"}
   }
 }
