--- a/campaign_releases.json
+++ b/campaign_releases.json
@@ -3,6 +3,9 @@
     "005": {"arch": "slc6_amd64_gcc530", "release": "CMSSW_8_0_28"},
     "012": {"arch": "slc6_amd64_gcc630", "release": "CMSSW_10_1_4"},
     "013": {"arch": "slc6_amd64_gcc700", "release": "CMSSW_10_2_5_patch1"},
+    "014": {"arch": "slc7_amd64_gcc700", "release": "CMSSW_10_2_15"},
+    "014_103x": {"arch": "slc7_amd64_gcc700", "release": "CMSSW_10_3_0"},
+    "014_106x": {"arch": "slc7_amd64_gcc820", "release": "CMSSW_10_6_4"},
     "hgc": {"arch": "slc7_amd64_gcc820", "release": "CMSSW_10_6_0_pre2"}
   },
   "miniaod": {
